# CFD_Lab_TUM

./: .gitignore  CMakeLists.txt  README.md
docs/: first-steps.md
example_cases/ChannelFlow/: ChannelFlow.pgm
example_cases/ChannelWithBFS/: ChannelWithBFS.pgm
example_cases/ChannelWithObstacle/: ChannelWithObstacle.pgm
example_cases/FluidTrap/: FluidTrap.pgm
example_cases/NaturalConvection/: NaturalConvection.pgm
example_cases/RayleighBenard/: RayleighBenard-long.pgm  RayleighBenard.pgm
include/: Boundary.hpp  CUDA_solver.cuh  Case.hpp  Communication.hpp  Datastructures.hpp  Discretization.hpp  Domain.hpp  Enums.hpp  Fields.hpp  Grid.hpp  PressureSolver.hpp
src/: Boundary.cpp  CUDA_solver.cu  Case.cpp  Communication.cpp  Discretization.cpp  Fields.cpp  Grid.cpp  PressureSolver.cpp
tools/: check-format  do-clang-format
